--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/pixellabs-web/images/transparent loader full.png" alt="" id="logo">
-            <img src="/pixellabs-web/images/pixellabs.png" alt="" id="txt">
+            <img src="/images/transparent loader full.png" alt="" id="logo">
+            <img src="/images/pixellabs.png" alt="" id="txt">
         </div>
         <nav>
             <ul class="nav_links">
@@ -73,7 +73,7 @@
         </div>
     </section>
 
-    <script type="text/javascript" src="/pixellabs-web/JS/mobile.js"></script>
+    <script type="text/javascript" src="/JS/mobile.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>1
     AOS.init();
